fix(steps): resolve text overflow no tooltip

--- a/packages/theme/src/steps/index.less
+++ b/packages/theme/src/steps/index.less
@@ -960,9 +960,10 @@
       }
 
       .label {
+        display: flex;
+        align-items: center;
         border: solid 1px var(--ti-steps-advanced-border-color);
         border-right: none;
-        display: block;
         text-align: center;
         position: relative;
         text-decoration: none;
@@ -1001,6 +1002,17 @@
             border-left-color: var(--ti-steps-advanced-li-hover-bg-color);
           }
         }
+
+        span {
+          flex: 1;
+          display: block;
+          width: 100%;
+          height: 100%;
+          margin: 0 var(--ti-steps-label-margin-horizontal);
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
       }
 
       &:first-child {
@@ -1030,12 +1042,12 @@
         height: var(--ti-steps-advanced-dot-height);
         width: var(--ti-steps-advanced-dot-width);
         margin-right: 8px;
-        padding: 0;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
+        // padding: 0;
+        // right: 0;
+        // top: 50%;
+        // transform: translateY(-50%);
         display: flex;
-        position: absolute;
+        // position: absolute;
 
         svg {
           width: 100%;
