--- a/packages/theme/src/steps/vars.less
+++ b/packages/theme/src/steps/vars.less
@@ -67,6 +67,8 @@
   --ti-steps-custom-icon-bg-color: var(--ti-common-color-bg-white-normal, #fff);
   // 自定义图标大小(hide)
   --ti-steps-custom-icon-width-height: var(--ti-common-space-3x, 12px);
+  // 名称水平外边距(hide)
+  --ti-steps-label-margin-horizontal: var(--ti-common-space-4x, 16px);
 
   // 活跃节点背景色
   --ti-steps-advanced-active-bg-color: var(--ti-common-color-bg-emphasize, #5e7ce0);
